--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-    <h1>hello world</h1>
+    
+    <div id="board"></div>
 
     <script src="./js/main.js"></script>
 </body>
